# MVFace

./: .gitignore  README.md  pyproject.toml
src/mvface/: __init__.py  backbone.py  decoder.py  geometry.py  losses.py  model.py
src/mvface/assets/: mean_face_68.npy  query_space.json
src/mvface/data/: __init__.py  facescape_dataset.py
tools/: _init_paths.py  train.py
