[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mvface"
version = "0.1.0"
description = "Multi-view 3D facial landmark estimation from calibrated RGB-D views"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pillow",
    "torch",
    "torchvision",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mvface = ["assets/*.npy", "assets/*.json"]
